fix: spacing

--- a/style.css
+++ b/style.css
@@ -24,9 +24,17 @@
  */
 
 .card {
+  display: flex;
+  flex-direction: column;
   padding: 20px;
   background-color: darkblue;
-  box-shadow: inset 0 0 100px 10px black;
+  box-shadow: inset 0 0 50px 10px black;
+}
+
+.main-image,
+.text,
+.h4-wrapper {
+  flex-grow: 1;
 }
 
 .main-image {
@@ -47,14 +55,14 @@
 
 h2 {
   margin-top: 2px;
-  margin-bottom: 5px;
+  margin-bottom: 7px;
   font-size: 13.9px;
   font-weight: normal;
   transform: scale(1, 2);
 }
 
 h1 {
-  margin-top: 38px;
+  margin-top: 40px;
   font-size: 32px;
   font-weight: bold;
   text-shadow: 2px 0.3px 0px magenta;
@@ -62,7 +70,7 @@ h1 {
 }
 
 h3 {
-  margin-top: 59px;
+  margin-top: 53px;
   font-size: 14.5px;
   font-weight: normal;
   transform: scale(1, 4);
@@ -72,7 +80,7 @@ h3 {
   display: flex;
   width: 300px;
   margin-left: -20px;
-  margin-top: 15px;
+  margin-top: 16px;
   background-color: white;
   box-shadow: inset -100px 0 50px -100px black, inset 100px 0 50px -100px black;
 }
